// ============================================================================
// ⚠  INTERNAL TRANSPORT — DO NOT USE DIRECTLY  ⚠
// ============================================================================
//
// This gRPC service is an INTERNAL transport between the EntDB server and the
// official SDKs. It is NOT a stable public API.
//
//   ✗ DO NOT hand-roll a client against this proto (curl, grpcurl, custom
//     stubs in any language). Doing so WILL break: field IDs, actor strings,
//     ACL encoding, idempotency keys, schema fingerprints, and tenant
//     routing have non-obvious invariants enforced by the SDKs.
//   ✗ DO NOT treat the wire format as a public contract. RPCs, fields, and
//     semantics may change without notice between releases.
//
//   ✓ Use the Go SDK:     github.com/elloloop/tenant-shard-db/sdk/go/entdb
//   ✓ Use the Python SDK: pip install entdb-sdk
//
// If your language isn't supported, file an issue — don't reach for the
// proto.
// ============================================================================
//
// EntDB gRPC Service Definition
//
// This file defines the gRPC API for the EntDB database service.
// The API supports node/edge graph operations with tenant isolation.
//
// Key concepts:
// - Every operation requires tenant_id and actor
// - Writes are atomic via ExecuteAtomic RPC
// - Reads are eventually consistent from SQLite views
//
// Compatibility rules:
// - Field numbers are immutable
// - New fields should be optional
// - Deprecated fields should be marked but kept

syntax = "proto3";

package entdb.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/example/entdb/proto/v1";

// EntDB Service - Main API for database operations
service EntDBService {
    // Execute an atomic transaction containing one or more operations
    // Returns a receipt that can be used to check application status
    rpc ExecuteAtomic(ExecuteAtomicRequest) returns (ExecuteAtomicResponse);

    // Get the status of a previously submitted transaction
    rpc GetReceiptStatus(GetReceiptStatusRequest) returns (GetReceiptStatusResponse);

    // Get a node by ID
    rpc GetNode(GetNodeRequest) returns (GetNodeResponse);

    // Get multiple nodes by IDs
    rpc GetNodes(GetNodesRequest) returns (GetNodesResponse);

    // Query nodes by type with optional filters
    rpc QueryNodes(QueryNodesRequest) returns (QueryNodesResponse);

    // Get outgoing edges from a node
    rpc GetEdgesFrom(GetEdgesRequest) returns (GetEdgesResponse);

    // Get incoming edges to a node
    rpc GetEdgesTo(GetEdgesRequest) returns (GetEdgesResponse);

    // Search mailbox with full-text search
    rpc SearchMailbox(SearchMailboxRequest) returns (SearchMailboxResponse);

    // Get mailbox items for a user
    rpc GetMailbox(GetMailboxRequest) returns (GetMailboxResponse);

    // Get server health and status
    rpc Health(HealthRequest) returns (HealthResponse);

    // Get schema information
    rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);

    // List all tenants that have data
    rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse);

    // List mailbox users for a tenant
    rpc ListMailboxUsers(ListMailboxUsersRequest) returns (ListMailboxUsersResponse);

    // Wait for a specific stream position to be applied
    rpc WaitForOffset(WaitForOffsetRequest) returns (WaitForOffsetResponse);

    // ACL v2 - Get connected nodes with ACL filtering
    rpc GetConnectedNodes(GetConnectedNodesRequest) returns (GetConnectedNodesResponse);

    // ACL v2 - Share a node with an actor
    rpc ShareNode(ShareNodeRequest) returns (ShareNodeResponse);

    // ACL v2 - Revoke access from an actor
    rpc RevokeAccess(RevokeAccessRequest) returns (RevokeAccessResponse);

    // ACL v2 - List nodes shared with the caller
    rpc ListSharedWithMe(ListSharedWithMeRequest) returns (ListSharedWithMeResponse);

    // ACL v2 - Add a member to a group
    rpc AddGroupMember(GroupMemberRequest) returns (GroupMemberResponse);

    // ACL v2 - Remove a member from a group
    rpc RemoveGroupMember(GroupMemberRequest) returns (GroupMemberResponse);

    // ACL v2 - Transfer ownership of a node
    rpc TransferOwnership(TransferOwnershipRequest) returns (TransferOwnershipResponse);

    // User registry CRUD
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

    // Tenant registry CRUD
    rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
    rpc GetTenant(GetTenantRequest) returns (GetTenantResponse);
    rpc ArchiveTenant(ArchiveTenantRequest) returns (ArchiveTenantResponse);

    // Tenant membership management
    rpc AddTenantMember(TenantMemberRequest) returns (TenantMemberResponse);
    rpc RemoveTenantMember(TenantMemberRequest) returns (TenantMemberResponse);
    rpc GetTenantMembers(GetTenantMembersRequest) returns (GetTenantMembersResponse);
    rpc GetUserTenants(GetUserTenantsRequest) returns (GetUserTenantsResponse);
    rpc ChangeMemberRole(ChangeMemberRoleRequest) returns (ChangeMemberRoleResponse);

    // Admin operations (Issue #90, ADR-003)
    rpc TransferUserContent(TransferUserContentRequest) returns (TransferUserContentResponse);
    rpc DelegateAccess(DelegateAccessRequest) returns (DelegateAccessResponse);
    rpc SetLegalHold(LegalHoldRequest) returns (LegalHoldResponse);
    rpc RevokeAllUserAccess(RevokeAllUserAccessRequest) returns (RevokeAllUserAccessResponse);

    // GDPR operations (Issue #103, ADR-004)
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ExportUserData(ExportUserDataRequest) returns (ExportUserDataResponse);
    rpc FreezeUser(FreezeUserRequest) returns (FreezeUserResponse);
    rpc CancelUserDeletion(CancelUserDeletionRequest) returns (CancelUserDeletionResponse);

    // Quota dashboard (ADR: docs/decisions/quotas.md)
    rpc GetTenantQuota(GetTenantQuotaRequest) returns (GetTenantQuotaResponse);

    // Unique-key secondary lookup (2026-04-13 unique_keys decision)
    rpc GetNodeByKey(GetNodeByKeyRequest) returns (GetNodeByKeyResponse);

    // Full-text search across searchable fields (2026-04-19 FTS decision)
    rpc SearchNodes(SearchNodesRequest) returns (SearchNodesResponse);
}

// Common message types

message RequestContext {
    // Tenant identifier (required)
    string tenant_id = 1;

    // Actor performing the operation (required)
    // Format: "user:ID", "system:NAME", etc.
    string actor = 2;

    // Optional trace ID for distributed tracing
    string trace_id = 3;
}

message Receipt {
    // Tenant identifier
    string tenant_id = 1;

    // Idempotency key for the transaction
    string idempotency_key = 2;

    // Stream position where the event was written
    string stream_position = 3;
}

// Execute Atomic - Write operations

message ExecuteAtomicRequest {
    // Request context (required)
    RequestContext context = 1;

    // Idempotency key (optional, generated if not provided)
    string idempotency_key = 2;

    // Schema fingerprint for validation
    string schema_fingerprint = 3;

    // List of operations to execute atomically
    repeated Operation operations = 4;

    // Whether to wait for the event to be applied before returning
    bool wait_applied = 5;

    // Timeout for wait_applied in milliseconds
    int32 wait_timeout_ms = 6;
}

message Operation {
    oneof op {
        CreateNodeOp create_node = 1;
        UpdateNodeOp update_node = 2;
        DeleteNodeOp delete_node = 3;
        CreateEdgeOp create_edge = 4;
        DeleteEdgeOp delete_edge = 5;
    }
}

// Storage mode for a node (2026-04-13 storage decision).
//
// Storage mode is chosen at creation time and is IMMUTABLE. It cannot
// be changed by ``update_node``. The server enforces the
// ``USER_MAILBOX -> TENANT -> PUBLIC`` privacy hierarchy on edges —
// more-private data can reference less-private data, never the
// reverse.
enum StorageMode {
    // Default — node lives in the tenant SQLite file (tenant_<id>.db)
    // and is sharable via ACL within the tenant.
    STORAGE_MODE_TENANT = 0;

    // Node lives in a per-user SQLite file
    // ({tenant_id}/user_{user_id}.db) and is private to exactly one
    // user. Requires ``target_user_id`` to be set at creation.
    STORAGE_MODE_USER_MAILBOX = 1;

    // Node lives in the singleton public.db and is readable by any
    // tenant.
    STORAGE_MODE_PUBLIC = 2;
}

message CreateNodeOp {
    // Node type ID (required)
    int32 type_id = 1;

    // Node ID (optional, generated if not provided)
    string id = 2;

    // Reserved: old JSON string fields
    reserved 3, 4;
    reserved "data_json", "acl_json";

    // Alias for referencing this node in subsequent operations
    string as = 5;

    // Users to fanout this node to
    repeated string fanout_to = 6;

    // Payload as typed Struct
    google.protobuf.Struct data = 7;

    // ACL entries
    repeated AclEntry acl = 8;

    // Storage mode for this node — immutable after creation
    // (2026-04-13 storage decision).
    StorageMode storage_mode = 9;

    // Owning user id for ``STORAGE_MODE_USER_MAILBOX`` nodes. Required
    // when ``storage_mode == STORAGE_MODE_USER_MAILBOX``; ignored for
    // other modes.
    string target_user_id = 10;

    // Field 11 (``map<string, string> keys``) is retired as of the
    // 2026-04-14 SDK v0.3 decision. Unique constraints are now
    // declared at the proto field site with ``(entdb.field).unique =
    // true`` and enforced server-side by a unique expression index
    // on the JSON payload value; the client never has to hand over a
    // parallel keys map.
    reserved 11;
    reserved "keys";
}

message UpdateNodeOp {
    // Node type ID (required for validation)
    int32 type_id = 1;

    // Node ID or reference (required)
    string id = 2;

    // Reserved: old JSON string field
    reserved 3;
    reserved "patch_json";

    // Field mask for partial updates
    repeated string field_mask = 4;

    // Patch payload as typed Struct
    google.protobuf.Struct patch = 5;

    // Field 6 (``map<string, string> keys``) is retired as of the
    // 2026-04-14 SDK v0.3 decision. See CreateNodeOp.reserved 11 for
    // the rationale — unique values are carried in the regular
    // ``patch`` payload and enforced by the unique expression index
    // on the referenced field id.
    reserved 6;
    reserved "keys";
}

message DeleteNodeOp {
    // Node type ID
    int32 type_id = 1;

    // Node ID (required)
    string id = 2;
}

message CreateEdgeOp {
    // Edge type ID (required)
    int32 edge_id = 1;

    // Source node reference
    NodeRef from = 2;

    // Target node reference
    NodeRef to = 3;

    // Reserved: old JSON string field
    reserved 4;
    reserved "props_json";

    // Edge properties as typed Struct
    google.protobuf.Struct props = 5;
}

message DeleteEdgeOp {
    // Edge type ID (required)
    int32 edge_id = 1;

    // Source node reference
    NodeRef from = 2;

    // Target node reference
    NodeRef to = 3;
}

message NodeRef {
    oneof ref {
        // Direct node ID
        string id = 1;

        // Reference to aliased node (e.g., "$task.id")
        string alias_ref = 2;

        // Type ID + node ID
        TypedNodeRef typed = 3;
    }
}

message TypedNodeRef {
    int32 type_id = 1;
    string id = 2;
}

message ExecuteAtomicResponse {
    // Whether the operation succeeded
    bool success = 1;

    // Receipt for tracking (present on success)
    Receipt receipt = 2;

    // Error message (present on failure)
    string error = 3;

    // Error code for programmatic handling
    string error_code = 4;

    // IDs of created nodes (in order of operations)
    repeated string created_node_ids = 5;

    // Application status (if wait_applied was true)
    ReceiptStatus applied_status = 6;
}

// Receipt Status

message GetReceiptStatusRequest {
    RequestContext context = 1;
    string idempotency_key = 2;
}

message GetReceiptStatusResponse {
    ReceiptStatus status = 1;
    string error = 2;
}

enum ReceiptStatus {
    RECEIPT_STATUS_UNKNOWN = 0;
    RECEIPT_STATUS_PENDING = 1;
    RECEIPT_STATUS_APPLIED = 2;
    RECEIPT_STATUS_FAILED = 3;
}

// Read operations

message GetNodeRequest {
    RequestContext context = 1;
    int32 type_id = 2;
    string node_id = 3;

    // Wait for this stream position to be applied before reading
    string after_offset = 10;
    int32 wait_timeout_ms = 11;
}

message GetNodeResponse {
    Node node = 1;
    bool found = 2;
}

message GetNodesRequest {
    RequestContext context = 1;
    int32 type_id = 2;
    repeated string node_ids = 3;

    // Wait for this stream position to be applied before reading
    string after_offset = 10;
    int32 wait_timeout_ms = 11;
}

message GetNodesResponse {
    repeated Node nodes = 1;
    repeated string missing_ids = 2;
}

message QueryNodesRequest {
    RequestContext context = 1;
    int32 type_id = 2;

    // Reserved: old JSON string field
    reserved 3;
    reserved "filter_json";

    // Pagination
    int32 limit = 4;
    int32 offset = 5;

    // Sort order
    string order_by = 6;
    bool descending = 7;

    // Typed filter conditions
    repeated FieldFilter filters = 8;

    // Wait for this stream position to be applied before reading
    string after_offset = 10;
    int32 wait_timeout_ms = 11;
}

message QueryNodesResponse {
    repeated Node nodes = 1;
    int32 total_count = 2;
    bool has_more = 3;
}

message Node {
    string tenant_id = 1;
    string node_id = 2;
    int32 type_id = 3;

    // Reserved: old JSON string fields
    reserved 4, 8;
    reserved "payload_json", "acl_json";

    int64 created_at = 5;
    int64 updated_at = 6;
    string owner_actor = 7;

    // Payload as typed Struct
    google.protobuf.Struct payload = 9;

    // ACL entries
    repeated AclEntry acl = 10;
}

// Edge operations

message GetEdgesRequest {
    RequestContext context = 1;
    string node_id = 2;

    // Optional edge type filter
    int32 edge_type_id = 3;

    // Pagination
    int32 limit = 4;
    int32 offset = 5;
}

message GetEdgesResponse {
    repeated Edge edges = 1;
    bool has_more = 2;
}

message Edge {
    string tenant_id = 1;
    int32 edge_type_id = 2;
    string from_node_id = 3;
    string to_node_id = 4;

    // Reserved: old JSON string field
    reserved 5;
    reserved "props_json";

    int64 created_at = 6;

    // Edge properties as typed Struct
    google.protobuf.Struct props = 7;
}

// Mailbox operations

message SearchMailboxRequest {
    RequestContext context = 1;

    // User whose mailbox to search
    string user_id = 2;

    // Search query
    string query = 3;

    // Optional type filter
    repeated int32 source_type_ids = 4;

    // Pagination
    int32 limit = 5;
    int32 offset = 6;
}

message SearchMailboxResponse {
    repeated MailboxSearchResult results = 1;
    bool has_more = 2;
}

message MailboxSearchResult {
    MailboxItem item = 1;
    float rank = 2;
    string highlights = 3;
}

message GetMailboxRequest {
    RequestContext context = 1;
    string user_id = 2;

    // Filters
    int32 source_type_id = 3;
    string thread_id = 4;
    bool unread_only = 5;

    // Pagination
    int32 limit = 6;
    int32 offset = 7;
}

message GetMailboxResponse {
    repeated MailboxItem items = 1;
    int32 unread_count = 2;
    bool has_more = 3;
}

message MailboxItem {
    string item_id = 1;
    string ref_id = 2;
    int32 source_type_id = 3;
    string source_node_id = 4;
    string thread_id = 5;
    int64 ts = 6;

    // Reserved: old JSON string fields
    reserved 7, 9;
    reserved "state_json", "metadata_json";

    string snippet = 8;

    // State as typed Struct
    google.protobuf.Struct state = 10;

    // Metadata as typed Struct
    google.protobuf.Struct metadata = 11;
}

// Health and Schema

message HealthRequest {}

message HealthResponse {
    bool healthy = 1;
    string version = 2;
    map<string, string> components = 3;
}

message GetSchemaRequest {
    // Optional: get schema for specific type
    int32 type_id = 1;

    // Optional: tenant ID for observed schema fallback
    string tenant_id = 2;
}

message GetSchemaResponse {
    // Reserved: old JSON string field
    reserved 1;
    reserved "schema_json";

    string fingerprint = 2;

    // Schema as typed Struct
    google.protobuf.Struct schema = 3;
}

// Tenant listing

message ListTenantsRequest {}

message ListTenantsResponse {
    repeated TenantInfo tenants = 1;
}

message TenantInfo {
    string tenant_id = 1;
}

// Mailbox user listing

message ListMailboxUsersRequest {
    string tenant_id = 1;
}

message ListMailboxUsersResponse {
    repeated string user_ids = 1;
}

// ACL and filter types

// Universal, built-in capabilities. Mirror of
// ``entdb.CoreCapability`` in entdb_options.proto — kept here so that
// server ACL wire messages do not depend on the user options import.
enum CoreCapability {
    CORE_CAP_UNSPECIFIED = 0;
    CORE_CAP_READ = 1;
    CORE_CAP_COMMENT = 2;
    CORE_CAP_EDIT = 3;
    CORE_CAP_DELETE = 4;
    CORE_CAP_ADMIN = 5;
}

message AclEntry {
    // Deprecated name field (kept for wire compatibility during
    // migration). Format: ``user:<id>`` / ``group:<id>`` /
    // ``service:<id>`` / ``tenant:<id>``.
    string principal = 1;

    // Deprecated string permission (``read`` / ``write`` / ``admin``
    // / ``deny``). New clients should populate ``core_caps`` /
    // ``ext_cap_ids`` instead.
    string permission = 2 [deprecated = true];

    // Grantee — equivalent to ``principal`` but using the naming
    // from the 2026-04-13 ACL decision. If both are set,
    // ``grantee`` wins.
    string grantee = 3;

    // The node type whose capability space ``ext_cap_ids`` refers to.
    // For purely ``core_caps``-only grants this may be 0.
    int32 type_id = 4;

    // Universal capabilities (``CoreCapability`` values).
    repeated CoreCapability core_caps = 5;

    // Type-specific extension capability enum values.
    repeated int32 ext_cap_ids = 6;

    // Optional expiry (unix millis).
    int64 expires_at = 7;
}

message FieldFilter {
    string field = 1;
    FilterOp op = 2;
    google.protobuf.Value value = 3;
}

enum FilterOp {
    EQ = 0;
    NEQ = 1;
    GT = 2;
    GTE = 3;
    LT = 4;
    LTE = 5;
    CONTAINS = 6;
    IN = 7;
}

// Wait for offset - read-after-write consistency

message WaitForOffsetRequest {
    RequestContext context = 1;
    string stream_position = 2;
    int32 timeout_ms = 3;
}

message WaitForOffsetResponse {
    bool reached = 1;
    string current_position = 2;
}

// ACL v2 messages

message GetConnectedNodesRequest {
    RequestContext context = 1;
    string node_id = 2;
    int32 edge_type_id = 3;
    int32 limit = 4;
    int32 offset = 5;
}

message GetConnectedNodesResponse {
    repeated Node nodes = 1;
    bool has_more = 2;
}

message ShareNodeRequest {
    RequestContext context = 1;
    string node_id = 2;
    // Grantee principal — ``user:<id>`` / ``group:<id>`` /
    // ``service:<id>`` / ``tenant:<id>``. The plain ``<id>`` form is
    // normalised to ``user:<id>`` by the server.
    string actor_id = 3;
    // Deprecated string permission. Clients should populate
    // ``core_caps`` / ``ext_cap_ids`` instead.
    string permission = 4 [deprecated = true];
    string actor_type = 5;
    int64 expires_at = 6;

    // Typed grant fields (2026-04-13 ACL decision). When set, the
    // server persists these verbatim. When empty, the server derives
    // them from ``permission`` for backwards compatibility.
    int32 type_id = 7;
    repeated CoreCapability core_caps = 8;
    repeated int32 ext_cap_ids = 9;
}

message ShareNodeResponse {
    bool success = 1;
    string error = 2;
}

message RevokeAccessRequest {
    RequestContext context = 1;
    string node_id = 2;
    string actor_id = 3;
}

message RevokeAccessResponse {
    bool found = 1;
    string error = 2;
}

message ListSharedWithMeRequest {
    RequestContext context = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message ListSharedWithMeResponse {
    repeated Node nodes = 1;
    bool has_more = 2;
}

message GroupMemberRequest {
    RequestContext context = 1;
    string group_id = 2;
    string member_actor_id = 3;
    string role = 4;
}

message GroupMemberResponse {
    bool success = 1;
    string error = 2;
}

message TransferOwnershipRequest {
    RequestContext context = 1;
    string node_id = 2;
    string new_owner = 3;
}

message TransferOwnershipResponse {
    bool found = 1;
    string error = 2;
}

// User registry messages

message UserInfo {
    string user_id = 1;
    string email = 2;
    string name = 3;
    string status = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message CreateUserRequest {
    // Actor performing the operation (must be admin or system)
    string actor = 1;
    string user_id = 2;
    string email = 3;
    string name = 4;
}

message CreateUserResponse {
    bool success = 1;
    UserInfo user = 2;
    string error = 3;
}

message GetUserRequest {
    string actor = 1;
    string user_id = 2;
}

message GetUserResponse {
    bool found = 1;
    UserInfo user = 2;
}

message UpdateUserRequest {
    // Actor performing the operation (must be the user themselves or admin)
    string actor = 1;
    string user_id = 2;
    string email = 3;
    string name = 4;
    string status = 5;
}

message UpdateUserResponse {
    bool success = 1;
    string error = 2;
}

message ListUsersRequest {
    string actor = 1;
    string status = 2;
    int32 limit = 3;
    int32 offset = 4;
}

message ListUsersResponse {
    repeated UserInfo users = 1;
}

// Tenant registry messages

message TenantDetail {
    string tenant_id = 1;
    string name = 2;
    string status = 3;
    int64 created_at = 4;
    // Geographic region the tenant's data is pinned to (e.g. "us-east-1",
    // "eu-west-1"). Data-plane traffic for this tenant must land on a
    // server configured for this region; cross-region requests are
    // rejected with FAILED_PRECONDITION.
    string region = 5;
}

message CreateTenantRequest {
    string actor = 1;
    string tenant_id = 2;
    string name = 3;
    // Geographic region pin. When empty, the server defaults the tenant
    // to its own served region.
    string region = 4;
}

message CreateTenantResponse {
    bool success = 1;
    TenantDetail tenant = 2;
    string error = 3;
}

message GetTenantRequest {
    string actor = 1;
    string tenant_id = 2;
}

message GetTenantResponse {
    bool found = 1;
    TenantDetail tenant = 2;
}

message ArchiveTenantRequest {
    string actor = 1;
    string tenant_id = 2;
}

message ArchiveTenantResponse {
    bool success = 1;
    string error = 2;
}

// Tenant membership messages

message TenantMemberInfo {
    string tenant_id = 1;
    string user_id = 2;
    string role = 3;
    int64 joined_at = 4;
}

message TenantMemberRequest {
    string actor = 1;
    string tenant_id = 2;
    string user_id = 3;
    string role = 4;
}

message TenantMemberResponse {
    bool success = 1;
    string error = 2;
}

message GetTenantMembersRequest {
    string actor = 1;
    string tenant_id = 2;
}

message GetTenantMembersResponse {
    repeated TenantMemberInfo members = 1;
}

message GetUserTenantsRequest {
    string actor = 1;
    string user_id = 2;
}

message GetUserTenantsResponse {
    repeated TenantMemberInfo memberships = 1;
}

message ChangeMemberRoleRequest {
    string actor = 1;
    string tenant_id = 2;
    string user_id = 3;
    string new_role = 4;
}

message ChangeMemberRoleResponse {
    bool success = 1;
    string error = 2;
}

// Admin operations (Issue #90, ADR-003)

message TransferUserContentRequest {
    string actor = 1;
    string tenant_id = 2;
    string from_user = 3;
    string to_user = 4;
}

message TransferUserContentResponse {
    bool success = 1;
    int32 transferred = 2;
    string error = 3;
}

message DelegateAccessRequest {
    string actor = 1;
    string tenant_id = 2;
    string from_user = 3;
    string to_user = 4;
    string permission = 5;
    int64 expires_at = 6;
}

message DelegateAccessResponse {
    bool success = 1;
    int32 delegated = 2;
    int64 expires_at = 3;
    string error = 4;
}

message LegalHoldRequest {
    string actor = 1;
    string tenant_id = 2;
    bool enabled = 3;
}

message LegalHoldResponse {
    bool success = 1;
    string status = 2;
    string error = 3;
}

message RevokeAllUserAccessRequest {
    string actor = 1;
    string tenant_id = 2;
    string user_id = 3;
}

message RevokeAllUserAccessResponse {
    bool success = 1;
    int32 revoked_grants = 2;
    int32 revoked_groups = 3;
    int32 revoked_shared = 4;
    string error = 5;
}

// GDPR operations (Issue #103, ADR-004)

message DeleteUserRequest {
    // Actor performing the operation (must be the user themselves or admin)
    string actor = 1;
    string user_id = 2;
    // Grace period in days before the deletion is actually executed.
    // Defaults to 30 when unset or zero.
    int32 grace_days = 3;
}

message DeleteUserResponse {
    bool success = 1;
    int64 requested_at = 2;
    int64 execute_at = 3;
    string status = 4;
    string error = 5;
}

message ExportUserDataRequest {
    string actor = 1;
    string user_id = 2;
}

message ExportUserDataResponse {
    bool success = 1;
    // JSON-serialized export bundle (nodes grouped by tenant).
    string export_json = 2;
    string error = 3;
}

message FreezeUserRequest {
    string actor = 1;
    string user_id = 2;
    // If false, the freeze is lifted and the user returns to ``active``.
    bool enabled = 3;
}

message FreezeUserResponse {
    bool success = 1;
    string status = 2;
    string error = 3;
}

message CancelUserDeletionRequest {
    string actor = 1;
    string user_id = 2;
}

message CancelUserDeletionResponse {
    bool success = 1;
    string error = 2;
}

// Quota dashboard messages (ADR: docs/decisions/quotas.md)
message GetTenantQuotaRequest {
    // Caller actor (used for admin-or-owner authorization).
    string actor = 1;
    // Tenant whose quota config + usage should be returned.
    string tenant_id = 2;
}

message GetTenantQuotaResponse {
    string tenant_id = 1;
    // Phase 1 — monthly write quota.
    int64 max_writes_per_month = 2;
    int64 writes_used = 3;
    int64 period_start_ms = 4;
    int64 period_end_ms = 5;
    // Phase 2 — per-tenant token bucket.
    int32 max_rps_sustained = 6;
    int32 max_rps_burst = 7;
    // Phase 3 — per-user token bucket.
    int32 max_rps_per_user_sustained = 8;
    int32 max_rps_per_user_burst = 9;
    // Whether monthly overage is hard-rejected (true) or soft-logged (false).
    bool hard_enforce = 10;
}

// Unique-key secondary lookup
// (2026-04-14 SDK v0.3 decision, supersedes 2026-04-13 unique_keys).
// ``field_id`` replaces the former ``key_name`` string — the key is
// a proto field on the type, not a separate named slot. The server
// runs the lookup against the unique expression index on
// ``json_extract(payload_json, '$."<field_id>"')``.

message GetNodeByKeyRequest {
    string tenant_id = 1;
    string actor = 2;
    int32 type_id = 3;
    // Retired: used to be ``string key_name = 4`` / ``string
    // key_value = 5``. Unique lookups are now expressed as a
    // ``(field_id, value)`` pair.
    reserved 4, 5;
    reserved "key_name", "key_value";
    // Optional read-after-write wait — the server blocks until the
    // applier has caught up to ``after_offset`` before resolving the
    // key. Empty / zero means "read whatever is currently applied".
    int64 after_offset = 6;
    // Field id of the unique key on the node type's proto schema
    // (e.g. ``1`` for ``string email = 1 [(entdb.field).unique =
    // true]``).
    int32 field_id = 7;
    // JSON-encoded value bound to the field. Using ``google.protobuf.Value``
    // keeps the request agnostic to the field's scalar type (string,
    // int, float, bool) while staying typed end-to-end.
    google.protobuf.Value value = 8;
}

message GetNodeByKeyResponse {
    Node node = 1;
    bool found = 2;
}

// Full-text search (2026-04-19 FTS decision)

message SearchNodesRequest {
    string tenant_id = 1;
    string actor = 2;
    int32 type_id = 3;
    // FTS5 match expression (supports AND/OR/NOT/phrase/prefix)
    string query = 4;
    int32 limit = 5;
    int32 offset = 6;
}

message SearchNodesResponse {
    repeated Node nodes = 1;
}
